Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-31767

QtC Outline View missing/confusing icons when using QmlLS

XMLWordPrintable

    • 51a51af4f (master), d7e4646e1 (master)

      As part of the https://bugreports.qt.io/browse/QTBUG-120002 I have implemented Document Symbols request support for the QmlLS.

      Unfortunately, QtC is either lacking support for some of the "SymbolKind"-s (from the lsp specs) and/or associate different icons with them.

      For example SymbolKind::Event and SymbolKind::Method have the same icon. SymbolKind::Class results in some form of "namespace", which is prolly ok, but the "in-built" version represents it as some form of "square...".

       

      I'm also attaching the VSCode view as for the reference / inspo

       

      Steps to reproduce:

      1. clone dev branch of qtdeclarative  && build qmlls target
      2. Add LanguageServer in the QtC with the binary pointing to the freshly built qmlls
      3. Open a qml file attached

       

      Feel free to reach out to me for more info if needed

        1. Screenshot from 2024-10-08 14-43-03.png
          46 kB
          Dmitrii Akshintsev
        2. Screenshot from 2024-10-08 14-43-34.png
          76 kB
          Dmitrii Akshintsev
        3. MethodSignals.qml
          0.2 kB
          Dmitrii Akshintsev
        4. Screenshot from 2025-01-28 14-23-39.png
          94 kB
          Dmitrii Akshintsev
        5. Screenshot from 2025-01-28 14-23-46.png
          67 kB
          Dmitrii Akshintsev
        6. simpleHierarchy.qml
          0.2 kB
          Dmitrii Akshintsev
        For Gerrit Dashboard: QTCREATORBUG-31767
        # Subject Branch Project Status CR V

            dima.a Dmitrii Akshintsev
            dima.a Dmitrii Akshintsev
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes